[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bullets/bullet.png" type="Texture" id=1]
[ext_resource path="res://scr/bullets/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/roundshadow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.42239, 2.94231 )

[sub_resource type="Curve" id=2]
min_value = -0.12
_data = [ Vector2( 0, 1 ), 0.0, -0.778909, 0, 1, Vector2( 1, 0.221091 ), -0.778909, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.674419, 1 )
colors = PoolColorArray( 0.58, 0.07, 4.62, 1, 1, 0.914062, 0, 1, 1, 1, 1, 0.631373 )

[sub_resource type="Animation" id=4]
resource_name = "destroyed_bullet"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="PlayerBullet" type="Area2D" groups=[
"bullet",
]]
input_pickable = false
collision_layer = 2
collision_mask = 252
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
scale = Vector2( 0.095, 0.03 )
enabled = false
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 1 )
energy = 5.0
range_layer_min = -100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
scale = Vector2( 0.320034, 0.273992 )
pause_animations = false
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 5
lifetime = 0.1
speed_scale = 3.5
local_coords = false
draw_order = 1
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
damping = 5.0
scale_amount = 3.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroyed_bullet = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_viewport_exited"]
